# FastWeb

./: .gitignore
fastdemo/: greet.py  main.py  params.py  requirements.txt
fastdemo/arguments_sample/: main.py
fastdemo/authentication/: main.py
fastdemo/background_task/: main.py
fastdemo/cookie_header/: main.py
fastdemo/database_connection/: database.py  db_session.py  main.py  models.py
fastdemo/dependency_injection/: main.py
fastdemo/exception_handler/: main.py
fastdemo/metadata_documentation/: main.py
fastdemo/params_validation/: main.py
fastdemo/path_params/: main.py
fastdemo/query_params/: main.py
fastdemo/request_body/: main.py  main2.py
fastdemo/response_model/: main.py
fastnet/: authentication.py  background_tasks.py  cookie_header.py  database_connection.py  dependency_injection.py  error_handler.py  header_response.py  metadata_document.py  parameter_verification.py  path_parameter.py  pyproject.toml  query_parameter.py  request_body.py  response_model.py  sample_data.py
fastsite/: pyproject.toml
fastsite/.hypothesis/constants/: 04f30576d1d15030
fastsite/db/: cryptid.db
fastsite/fastsite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fastsite/src/: auth.py  errors.py  main.py  manual_test.py
fastsite/src/data/: creature.py  explorer.py  init.py  user.py
fastsite/src/fake/: creature.py  explorer.py  user.py
fastsite/src/model/: creature.py  explorer.py
fastsite/src/service/: creature.py  explorer.py  user.py
fastsite/src/test/unit/data/: test_data_creature.py  test_data_explorer.py  test_data_user.py  test_user.py
fastsite/src/test/unit/service/: test_service_creature.py  test_service_explorer.py  test_service_user.py
fastsite/src/test/unit/web/: test_web_creature.py
fastsite/src/web/: creature.py  explorer.py  user.py
myfast/: fast_async.py  fast_generator.py  greet_async_uvicorn.py  hello.py  main.py  pyproject.toml  startlette_hello.py
myfast/fastdepends/: dependency_in_app.py  inject_dependency.py  inject_dependency_decorator.py
myfast/fastpydantic/: data.py  model.py  test2.py  test3.py  web.py
myfast/model/: tag.py
myfast/service/: tag.py
myfast/tests/: test_calculator.py  test_json_encoder.py  test_web_tag.py
myfast/web/: tag.py
