[project]
name = "fastnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.5",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "fastapi-users>=15.0.4",
    "httpie>=3.2.4",
    "httpx>=0.28.1",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.11.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
]
